--- a/src/api/CMakeLists.txt
+++ b/src/api/CMakeLists.txt
@@ -1,80 +1,9 @@
-set(BUILD_INCLUDE_DIR "${PROJECT_BINARY_DIR}/include")
-
-configure_file("${PROJECT_SOURCE_DIR}/include/tiro/api.h.in" "${BUILD_INCLUDE_DIR}/tiro/api.h" @ONLY)
-
-set(TIRO_HEADERS
-    "${BUILD_INCLUDE_DIR}/tiro/api.h"
+target_sources(tiro_objects
+    PRIVATE
+        compiler.cpp
+        errors.cpp
+        internal.hpp
+        utils.cpp
+        version.cpp
+        vm.cpp
 )
-
-add_library(tiro_api_objects OBJECT
-    ${TIRO_HEADERS}
-
-    internal.hpp
-    
-    compiler.cpp
-    errors.cpp
-    utils.cpp
-    version.cpp
-    vm.cpp
-)
-
-target_include_directories(tiro_api_objects PUBLIC "${BUILD_INCLUDE_DIR}")
-target_link_libraries(tiro_api_objects PUBLIC tiro_objects)
-target_link_libraries(tiro_api_objects PRIVATE common_flags)
-target_compile_definitions(tiro_api_objects PRIVATE "TIRO_BUILDING_DLL")
-
-# TODO: apparently the public object dependency (link to tiro_objects) is not propagated...
-#       this is why we link to tiro_objects again below
-# TODO: Strip all unexported symbols from c api
-add_library(tiro_static STATIC)
-target_include_directories(tiro_static PUBLIC 
-    $<BUILD_INTERFACE:${BUILD_INCLUDE_DIR}>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
-target_link_libraries(tiro_static PRIVATE common_flags)
-target_link_libraries(tiro_static PRIVATE tiro_objects tiro_api_objects)
-
-add_library(tiro SHARED)
-target_include_directories(tiro PUBLIC 
-    $<BUILD_INTERFACE:${BUILD_INCLUDE_DIR}>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
-target_link_libraries(tiro PRIVATE common_flags)
-target_link_libraries(tiro PRIVATE tiro_objects tiro_api_objects)
-
-# Make sure that only exported symbols (i.e. tiro_*) are exported by the shared library.
-# TODO: This should be done for msvc as well.
-if(NOT EMSCRIPTEN AND ((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")))
-    target_link_libraries(tiro PRIVATE "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/api.version.gcc")
-endif()
-
-
-set(TARGETS_EXPORT_NAME "tiro-targets")
-write_basic_package_version_file(
-    "${PROJECT_BINARY_DIR}/tiro-config-version.cmake"
-    VERSION ${PROJECT_VERSION}
-    COMPATIBILITY SameMinorVersion
-)
-configure_package_config_file(
-    "${PROJECT_SOURCE_DIR}/utils/cmake/tiro-config.cmake.in"
-    "${PROJECT_BINARY_DIR}/tiro-config.cmake"
-    INSTALL_DESTINATION ${CMAKE_INSTALL_DIR}/tiro/cmake
-)
-
-install(TARGETS tiro 
-    EXPORT ${TARGETS_EXPORT_NAME}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
-install(EXPORT ${TARGETS_EXPORT_NAME}
-    FILE ${TARGETS_EXPORT_NAME}.cmake
-    NAMESPACE tiro::
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/tiro
-)
-install(FILES ${TIRO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tiro)
-install(
-    FILES 
-        "${PROJECT_BINARY_DIR}/tiro-config-version.cmake"
-        "${PROJECT_BINARY_DIR}/tiro-config.cmake"
-    DESTINATION 
-        "${CMAKE_INSTALL_LIBDIR}/cmake/tiro"
-)
-
