--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -114,16 +114,18 @@ target_link_libraries(tiro_static PRIVATE common_flags)
 target_link_libraries(tiro_static PRIVATE tiro_objects)
 
 # TODO: Silly duplication
-add_library(tiro SHARED)
-add_library(tiro::tiro ALIAS tiro)
-target_include_directories(tiro
-    PUBLIC 
-        $<BUILD_INTERFACE:${SOURCE_INCLUDE_DIR}>
-        $<BUILD_INTERFACE:${BUILD_INCLUDE_DIR}>
-        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-)
-target_link_libraries(tiro PRIVATE common_flags)
-target_link_libraries(tiro PRIVATE tiro_objects)
+if (NOT TIRO_SKIP_SHARED)
+    add_library(tiro SHARED)
+    add_library(tiro::tiro ALIAS tiro)
+    target_include_directories(tiro
+        PUBLIC 
+            $<BUILD_INTERFACE:${SOURCE_INCLUDE_DIR}>
+            $<BUILD_INTERFACE:${BUILD_INCLUDE_DIR}>
+            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+    )
+    target_link_libraries(tiro PRIVATE common_flags)
+    target_link_libraries(tiro PRIVATE tiro_objects)
+endif()
 
 # Make sure that only exported symbols (i.e. tiro_*) are exported by the shared library.
 # TODO: This should be done for msvc as well.
@@ -133,43 +135,49 @@ endif()
 
 add_library(tiropp INTERFACE)
 add_library(tiro::tiropp ALIAS tiropp)
-target_link_libraries(tiropp INTERFACE tiro::tiro)
+if (TIRO_SKIP_SHARED)
+    target_link_libraries(tiropp INTERFACE tiro_static)
+else()
+    target_link_libraries(tiropp INTERFACE tiro::tiro)
+endif()
 target_include_directories(tiropp
     INTERFACE
         $<BUILD_INTERFACE:${SOURCE_INCLUDE_DIR}>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
-# Setup exported files for find_package support.
-set(TARGETS_EXPORT_NAME "tiro-targets")
-write_basic_package_version_file(
-    "${PROJECT_BINARY_DIR}/tiro-config-version.cmake"
-    VERSION ${PROJECT_VERSION}
-    COMPATIBILITY SameMinorVersion
-)
-configure_package_config_file(
-    "${PROJECT_SOURCE_DIR}/support/cmake/tiro-config.cmake.in"
-    "${PROJECT_BINARY_DIR}/tiro-config.cmake"
-    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/tiro/cmake
-)
-
-install(TARGETS tiro tiropp
-    EXPORT ${TARGETS_EXPORT_NAME}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
-install(EXPORT ${TARGETS_EXPORT_NAME}
-    FILE ${TARGETS_EXPORT_NAME}.cmake
-    NAMESPACE tiro::
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/tiro
-)
-install(FILES ${TIRO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tiro)
-install(FILES ${TIROPP_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tiropp)
-install(
-    FILES 
+if (NOT TIRO_SKIP_INSTALL)
+    # Setup exported files for find_package support.
+    set(TARGETS_EXPORT_NAME "tiro-targets")
+    write_basic_package_version_file(
         "${PROJECT_BINARY_DIR}/tiro-config-version.cmake"
+        VERSION ${PROJECT_VERSION}
+        COMPATIBILITY SameMinorVersion
+    )
+    configure_package_config_file(
+        "${PROJECT_SOURCE_DIR}/support/cmake/tiro-config.cmake.in"
         "${PROJECT_BINARY_DIR}/tiro-config.cmake"
-    DESTINATION 
-        "${CMAKE_INSTALL_LIBDIR}/cmake/tiro"
-)
+        INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/tiro/cmake
+    )
+
+    install(TARGETS tiro tiropp
+        EXPORT ${TARGETS_EXPORT_NAME}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    )
+    install(EXPORT ${TARGETS_EXPORT_NAME}
+        FILE ${TARGETS_EXPORT_NAME}.cmake
+        NAMESPACE tiro::
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/tiro
+    )
+    install(FILES ${TIRO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tiro)
+    install(FILES ${TIROPP_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tiropp)
+    install(
+        FILES 
+            "${PROJECT_BINARY_DIR}/tiro-config-version.cmake"
+            "${PROJECT_BINARY_DIR}/tiro-config.cmake"
+        DESTINATION 
+            "${CMAKE_INSTALL_LIBDIR}/cmake/tiro"
+    )
+endif()
