Remove dynamic object, add record (no syntax yet).

--- a/src/vm/objects/CMakeLists.txt
+++ b/src/vm/objects/CMakeLists.txt
@@ -24,6 +24,8 @@ target_sources(tiro_objects
         native.hpp
         primitives.cpp
         primitives.hpp
+        record.cpp
+        record.hpp
         result.hpp
         result.cpp
         set.cpp
