Fully integrate record templates.

--- a/test/unit_tests/compiler/bytecode_gen/CMakeLists.txt
+++ b/test/unit_tests/compiler/bytecode_gen/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(unit_tests
     PRIVATE
         locations_test.cpp
         parallel_copy_test.cpp
+        record_template_test.cpp
 )
