Implement simple module import resolution. Initializers are called when a module is imported for the first time.

--- a/src/vm/CMakeLists.txt
+++ b/src/vm/CMakeLists.txt
@@ -13,8 +13,8 @@ target_sources(tiro_objects
         hash.hpp
         interpreter.cpp
         interpreter.hpp
-        load.cpp
-        load.hpp
+        load_module.cpp
+        load_module.hpp
         math.cpp
         math.hpp
         types.cpp
