Move unit tests as well.

--- a/test/unit_tests/vm/CMakeLists.txt
+++ b/test/unit_tests/vm/CMakeLists.txt
@@ -7,4 +7,5 @@ target_sources(unit_tests
         context_test.cpp
         load_module_test.cpp
         math_test.cpp
+        module_registry_test.cpp
 )
