Implement cycle detection during module resolution.

--- a/test/unit_tests/support/CMakeLists.txt
+++ b/test/unit_tests/support/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(unit_tests
-    PRIVATE 
+    PRIVATE
+        matchers.hpp
         test_parser.hpp
         test_rng.hpp
         test_compiler.cpp
