Move asserts into assert.hpp

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(tiro_objects
     PRIVATE
+        assert.cpp
+        assert.hpp
         defs.cpp
         defs.hpp
         dynamic_bitset.hpp
