--- a/test/unit_tests/CMakeLists.txt
+++ b/test/unit_tests/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(unit_tests PRIVATE tiro_objects)
 target_link_libraries(unit_tests PRIVATE Catch2::Catch2)
 target_include_directories(unit_tests PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 
+add_subdirectory(bytecode)
 add_subdirectory(compiler)
 add_subdirectory(common)
 add_subdirectory(eval)
