--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ option(TIRO_LTO "Enable link time optimization (if supported)." OFF)
 option(TIRO_COV "Code coverage analysis. Build mode should be Debug." OFF)
 option(TIRO_SAN "Enable compiling with sanitizer flags (GCC only)." OFF)
 option(TIRO_TESTS "Build unit test target." ${TIRO_DEV})
+option(TIRO_DOCS "Enable documentation build target (use target doc to build)." OFF)
 option(TIRO_RTTI "Enable or disable building with runtime type information." OFF)
 
 # These options should only be enabled during development!
@@ -145,4 +146,7 @@ endif()
 add_subdirectory(src)
 if(TIRO_TESTS)
     add_subdirectory(test)
+endif()
+if (TIRO_DOCS)
+    add_subdirectory(docs/apidocs)
 endif()
