--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,5 +148,5 @@ if(TIRO_TESTS)
     add_subdirectory(test)
 endif()
 if (TIRO_DOCS)
-    add_subdirectory(docs/apidocs)
+    add_subdirectory(docs/api)
 endif()
