--- a/docs/api/Doxyfile.in
+++ b/docs/api/Doxyfile.in
@@ -1200,7 +1200,7 @@ GENERATE_HTML          = YES
 # The default directory is: html.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_OUTPUT            = html
+HTML_OUTPUT            = @DOXYGEN_HTML_OUTPUT@
 
 # The HTML_FILE_EXTENSION tag can be used to specify the file extension for each
 # generated HTML page (for example: .htm, .php, .asp).
@@ -1227,7 +1227,7 @@ HTML_FILE_EXTENSION    =  .html
 # of the possible markers and block names see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_HEADER            = @DOXYGEN_OUTPUT_DIR@/header.html
+HTML_HEADER            = @DOXYGEN_HEADER_HTML@
 
 # The HTML_FOOTER tag can be used to specify a user-defined HTML footer for each
 # generated HTML page. If the tag is left blank doxygen will generate a standard
@@ -1237,7 +1237,7 @@ HTML_HEADER            = @DOXYGEN_OUTPUT_DIR@/header.html
 # that doxygen normally uses.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_FOOTER            = @DOXYGEN_SOURCE_DIR@/footer.html
+HTML_FOOTER            = @DOXYGEN_FOOTER_HTML@
 
 # The HTML_STYLESHEET tag can be used to specify a user-defined cascading style
 # sheet that is used by each HTML page. It can be used to fine-tune the look of
@@ -1249,7 +1249,7 @@ HTML_FOOTER            = @DOXYGEN_SOURCE_DIR@/footer.html
 # obsolete.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_STYLESHEET        = @DOXYGEN_SOURCE_DIR@/style.css
+HTML_STYLESHEET        = @DOXYGEN_STYLE_CSS@
 
 # The HTML_EXTRA_STYLESHEET tag can be used to specify additional user-defined
 # cascading style sheets that are included after the standard style sheets
@@ -2068,7 +2068,7 @@ MAN_LINKS              = NO
 # captures the structure of the code including all documentation.
 # The default value is: NO.
 
-GENERATE_XML           = YES
+GENERATE_XML           = NO
 
 # The XML_OUTPUT tag is used to specify where the XML pages will be put. If a
 # relative path is entered the value of OUTPUT_DIRECTORY will be put in front of
